# Cliplex

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  Package.resolved  Package.swift  README.md  RELEASING.md  SECURITY.md  THIRD-PARTY-LICENSES.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
Resources/: AppIcon.icns  Cliplex.entitlements  Info.plist
Resources/Fonts/: README.md
Sources/Cliplex/: ActionsView.swift  ActionsViewModel.swift  ActionsWindowController.swift  AppDelegate.swift  AppServices.swift  BrandMark.swift  Buttons.swift  CarbonHotKey.swift  Dialogs.swift  Fonts.swift  LibraryDialogs.swift  LibraryInspectors.swift  LibraryView.swift  LibraryViewModel.swift  LibraryWindowController.swift  LoginItem.swift  ManagerView.swift  ManagerViewModel.swift  ManagerWindowController.swift  PanelController.swift  PanelRowViews.swift  PanelView.swift  PanelViewModel.swift  ScreenshotMode.swift  SettingsView.swift  SettingsWindowController.swift  ShortcutCenter.swift  ShortcutChip.swift  Shortcuts.swift  SnippetsWindowController.swift  Theme.swift  WindowBackground.swift  main.swift
Sources/CliplexKit/: Accessibility.swift  ActionLogic.swift  Capture.swift  ClipboardMonitor.swift  Database.swift  MacClipboard.swift  Models.swift  PanelLayout.swift  Paste.swift  Search.swift  Settings.swift  SnippetArchive.swift
Tests/CliplexKitTests/: ActionTests.swift  CaptureTests.swift  ClipStoreTests.swift  PanelLayoutTests.swift  SnippetArchiveTests.swift
crates/cliplex-core/: Cargo.toml
crates/cliplex-core/src/: db.rs  error.rs  lib.rs  models.rs  search.rs
crates/cliplex-platform/: Cargo.toml
crates/cliplex-platform/examples/: ax_probe.rs  focus_probe.rs  inject_probe.rs  probe.rs
crates/cliplex-platform/src/: accessibility.rs  backend.rs  capture.rs  focus.rs  inject.rs  lib.rs  position.rs
crates/cliplex-platform/src/backend/: generic.rs  macos.rs
research/: do-a-research-on-clipy-https-github-com-clipy-clip.md
scripts/: build-app.sh  build-changelog.mjs  build-site.mjs  dev-deploy-macos.sh  dev-sign-macos.sh  gen-icons.sh  make-dev-cert.sh  package-release.sh  run-dev-signed.sh  serve-site.mjs  test.sh
site/: changelog.html.template  index.html  robots.txt
site/assets/: styles.css
tools/homebrew/: cliplex.rb
tools/screenshots/: README.md  capture-demo-gif.sh  capture.sh  seed.sql
