[package]
name = "cliplex-core"
description = "Cliplex core: OS-agnostic storage, search, models, and clipboard logic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1"
